--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-three/drei": "^9.105.6",
     "@react-three/fiber": "^8.16.3",
+    "axios": "^1.6.8",
     "classnames": "^2.5.1",
     "next": "14.2.3",
     "react": "^18",
