--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/env": "^14.2.3",
     "@react-three/drei": "^9.105.6",
     "@react-three/fiber": "^8.16.3",
     "axios": "^1.6.8",
