--- a/package.json
+++ b/package.json
@@ -11,16 +11,19 @@
   "dependencies": {
     "@react-three/drei": "^9.105.6",
     "@react-three/fiber": "^8.16.3",
+    "bootstrap": "^5.3.3",
     "classnames": "^2.5.1",
     "next": "14.2.3",
     "react": "^18",
+    "react-bootstrap": "^2.9.2",
     "react-dom": "^18",
+    "react-icons": "^5.2.1",
     "sass": "^1.76.0",
     "three": "^0.164.1"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/react": "18.3.1",
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^6.16.0",
     "@typescript-eslint/parser": "^6.16.0",
@@ -35,6 +38,6 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "5.4.5"
   }
 }
