--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "classnames": "^2.5.1",
+    "embla-carousel-react": "^8.0.4",
     "next": "14.2.3",
     "react": "^18",
     "react-bootstrap": "^2.9.2",
