--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "classnames": "^2.5.1",
     "embla-carousel-react": "^8.0.4",
     "next": "14.2.3",
+    "phaser": "^3.80.1",
     "react": "^18",
     "react-bootstrap": "^2.9.2",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "sass": "^1.76.0",
-    "three": "^0.164.1"
+    "three": "^0.164.1",
+    "webfontloader": "^1.6.28"
   },
   "devDependencies": {
     "@types/node": "^20",
