--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-bootstrap": "^2.9.2",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "react-use": "^17.5.0",
     "sass": "^1.76.0",
     "three": "^0.164.1",
     "webfontloader": "^1.6.28"
