--- a/package.json
+++ b/package.json
@@ -27,9 +27,16 @@
     "react-use": "^17.5.0",
     "sass": "^1.76.0",
     "three": "^0.164.1",
-    "webfontloader": "^1.6.28"
+    "webfontloader": "^1.6.28",
+    "phaser3-rex-plugins": "^1.80.3",
+    "s": "^1.0.0",
+    "src": "^1.1.2"
   },
   "devDependencies": {
+    "minimist": ">=1.2.2",
+    "parcel-bundler": "^1.12.5",
+    "parcel-plugin-clean-easy": "^1.0.2",
+    "parcel-plugin-static-files-copy": "^2.4.3",
     "@types/node": "^20",
     "@types/react": "18.3.1",
     "@types/react-dom": "^18",
