--- a/package.json
+++ b/package.json
@@ -14,38 +14,35 @@
     "@react-three/drei": "^9.105.6",
     "@react-three/fiber": "^8.16.3",
     "@tonconnect/ui-react": "^2.0.2",
+    "@types/matter-js": "0.17.6",
+    "@types/three": "0.161.2",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "classnames": "^2.5.1",
     "embla-carousel-react": "^8.0.4",
+    "enable3d": "^0.25.4",
+    "matter-js": "0.17.1",
     "next": "14.2.3",
+    "phaser": "^3.55.2",
+    "phaser3-rex-plugins": "^1.80.3",
+    "poly-decomp": "^0.3.0",
     "react": "^18",
     "react-bootstrap": "^2.9.2",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-use": "^17.5.0",
-    "sass": "^1.76.0",
-    "@types/matter-js": "0.17.6",
-    "@types/three": "0.161.2",
-    "enable3d": "^0.25.4",
-    "matter-js": "0.17.1",
-    "phaser": "^3.55.2",
-    "phaser3-rex-plugins": "^1.80.3",
-    "poly-decomp": "^0.3.0",
     "s": "^1.0.0",
+    "sass": "^1.76.0",
     "src": "^1.1.2",
     "three": "0.161.0",
     "three-csg-ts": "^3.1.10",
     "webfontloader": "^1.6.28"
   },
   "devDependencies": {
-    "minimist": ">=1.2.2",
-    "parcel-bundler": "^1.12.5",
-    "parcel-plugin-clean-easy": "^1.0.2",
-    "parcel-plugin-static-files-copy": "^2.4.3",
     "@types/node": "^20",
     "@types/react": "18.3.1",
     "@types/react-dom": "^18",
+    "@types/webfontloader": "^1.6.38",
     "@typescript-eslint/eslint-plugin": "^6.16.0",
     "@typescript-eslint/parser": "^6.16.0",
     "eslint": "^8.56.0",
@@ -57,6 +54,10 @@
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "minimist": ">=1.2.2",
+    "parcel-bundler": "^1.12.5",
+    "parcel-plugin-clean-easy": "^1.0.2",
+    "parcel-plugin-static-files-copy": "^2.4.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "5.4.5"
