--- a/.env.local
+++ b/.env.local
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_BACKEND_URL=http://localhost:8000/api/v1
+NEXT_PUBLIC_BACKEND_URL=http://192.168.1.59:8000/api/v1
 #NEXT_PUBLIC_BACKEND_URL=https://backend-ton-m7ayvlvyxq-uc.a.run.app/api/v1
